[tool.poetry]
name = "metisse-nikke"
version = "0.1.0"
description = ""
authors = ["weekanda7 <87613475+weekanda7@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "metisse_nikke"}]

[tool.poetry.dependencies]
python = "^3.8"
metisse = "^0.0.7"
isort = "^5.12.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    .git
  | .venv
  | sbase_env
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'venv',
    '__pycache__',
    'report',
    'sbase_env',
]